added JDK8 support and MPPSolar binding to configurator